--- a/parallax-main/style.css
+++ b/parallax-main/style.css
@@ -1,38 +1,49 @@
-* {
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap") * {
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
   box-sizing: border-box;
 }
-.container {
-  height: 100px;
-  display: flex;
-  justify-content: space-around;
-  flex: auto;
-}
-.container img {
-  position: absolute;
-  width: 100%;
-  height: 100px;
-  object-fit: cover;
-  z-index: -1;
 
-  flex-wrap: wrap;
+body {
+  font-family: "Lato", sans-serif;
+  color: #333;
+  line-height: 1.6;
 }
-.bg2 {
-  max-width: 300px;
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+h1,
+h2 {
+  font-weight: 300;
+  line-height: 1.2;
+  margin: 10px 0;
+}
+
+p {
+  margin: 10px;
+}
+
+img {
   width: 100%;
-  object-fit: cover;
-  flex-grow: 4;
 }
-.main-title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-size: 6rem;
+
+.navbar {
+  background-color: #a5978b;
+  color: #8a817c;
+  height: 70px;
 }
-.content-images {
-  flex-direction: row;
-  flex: initial;
+/* to center the page so that it doesnt extend over a certain point */
+.container {
+  max-width: 1100px;
+  /* 0 top and bottom, auto left and right */
+  margin: 0 auto;
+  /* to account for the space on top of the nav bar */
+  overflow: auto;
 }
