--- a/parallax-main/style.css
+++ b/parallax-main/style.css
@@ -23,7 +23,6 @@ ul {
 a {
   text-decoration: none;
   color: #333;
-  margin: 10px;
 }
 
 h1,
@@ -34,7 +33,7 @@ h2 {
 }
 
 p {
-  margin: 10px;
+  margin: 10px 0;
 }
 
 img {
@@ -128,4 +127,18 @@ img {
 /* Stats */
 .stats {
   padding-top: 100px;
+}
+
+.stats-heading {
+  max-width: 500px;
+  margin: auto;
+}
+
+.stats .grid h3 {
+  font-size: 35px;
+}
+
+.stats .grid p {
+  font-size: 20px;
+  font-weight: bold;
 }
