--- a/parallax-main/utilities.css
+++ b/parallax-main/utilities.css
@@ -38,6 +38,56 @@
     transform: scale(0.98);
   }
 
+  /* background and colored buttons */
+  .bg-primary, 
+  .btn-primary{
+    background-color: var(--primary-color);
+    color: white;
+  } 
+  .bg-secondary, 
+  .btn-secondary{
+    background-color: var(--secondary-color);
+    color: white;
+  } 
+  .bg-dark, 
+  .btn-dark{
+    background-color: var(--dark-color);
+    color: white;
+  } 
+  .bg-light, 
+  .btn-light{
+    background-color: var(--light-color);
+    color: black;
+  } 
+  .bg-primary a,
+  .btn-primary a,
+  .bg-secondary a,
+  .btn-secondary a,
+  .bg-dark a,
+  .btn-dark a {
+  color: #fff;
+}
+
+/* text sizes */
+.lead {
+  font-size: 20px;
+}
+
+.sm {
+  font-size: 1rem;
+}
+
+.md {
+  font-size: 2rem;
+}
+
+.lg {
+  font-size: 3rem;
+}
+
+.xl {
+  font-size: 4rem
+}
   .text-center{
     text-align: center;
   }
