--- a/parallax-main/style.css
+++ b/parallax-main/style.css
@@ -177,3 +177,54 @@ img {
 .languages .card:hover{
   transform: translateY(-15px);
 }
+/* footer */
+.footer .social a {
+  margin: 0 10px
+}
+
+/* tablets and under */
+@media(max-width: 768px){
+  .grid,
+  .showcase .grid,
+  .stats .grid, 
+  .cli .grid,
+  .cloud .grid,
+  .languages .grid{
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+}
+
+.showcase{
+  height: auto;
+}
+
+.showcase-text{
+  text-align: center;
+  margin-top: 40px;
+}
+
+.showcase-form{
+  justify-self: center;
+  margin: auto;
+}
+.cli .grid > *:first-child{
+  grid-column: 1;
+  grid-row: 1;
+  /* spans two columns and two rows, pushing the other children to the side */
+}
+
+/* mobile */
+@media(max-width: 500px){
+  .navbar {
+    height: 110px;
+  }
+
+  .navbar .flex{
+    flex-direction: column;
+  }
+
+  .navbar ul{
+    padding: 10px;
+    background-color: rgba(0,0,0,0.1);
+  }
+}
