--- a/parallax-main/style.css
+++ b/parallax-main/style.css
@@ -177,6 +177,30 @@ img {
 .languages .card:hover{
   transform: translateY(-15px);
 }
+/* features */
+.features-head img,
+docs-head img{
+  width: 200px;
+  justify-self: flex-end;
+}
+
+.features-sub-head img{
+  width: 300px;
+  justify-self: flex-end;
+}
+.features-main .card> i{
+  margin-right: 20px;
+}
+
+.features-main .grid{
+  padding: 30px;
+}
+.features-main .grid > *:firstchild{
+  grid-column: 1/ span 3;
+}
+.features-main .grid > *:nth-child(2){
+  grid-column: 1/ span 2;
+}
 /* footer */
 .footer .social a {
   margin: 0 10px
@@ -212,7 +236,7 @@ img {
   grid-row: 1;
   /* spans two columns and two rows, pushing the other children to the side */
 }
-
+}
 /* mobile */
 @media(max-width: 500px){
   .navbar {
