--- a/parallax-main/style.css
+++ b/parallax-main/style.css
@@ -179,7 +179,7 @@ img {
 }
 /* features */
 .features-head img,
-docs-head img{
+.docs-head img{
   width: 200px;
   justify-self: flex-end;
 }
@@ -195,11 +195,32 @@ docs-head img{
 .features-main .grid{
   padding: 30px;
 }
-.features-main .grid > *:firstchild{
+.features-main .grid > *:first-child{
   grid-column: 1/ span 3;
 }
 .features-main .grid > *:nth-child(2){
   grid-column: 1/ span 2;
+}
+
+/* docs */
+.docs-main h3{
+  margin: 20px 0;
+}
+
+.docs-main .grid{
+  grid-template-columns: 1fr 2fr;
+  align-items: flex-start;
+}
+
+.docs-main nav li{
+  font-size: 17px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px #ccc solid;
+}
+
+.docs-main a:hover {
+  font-weight: bold;
 }
 /* footer */
 .footer .social a {
